@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (future 6.0.2, SVN branch-6-0):
 ---------------------------
 
+- Changed msDrawVectorLayer() not to cache shapes if attribute binding is present after the first style (#3976)
+
 - Fix mapscript to build when TRUE macro is not defined (#3926)
 
 - Fix mapscript php build issues with MSVC (#4004)
